...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <GridView
        android:id="@+id/GV_wallet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:columnWidth="70dp"
        android:numColumns="auto_fit"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveToBank"
        app:layout_constraintTop_toBottomOf="@+id/instructionWallet"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/instructionWallet"
        android:layout_width="0dp"
...
        android:id="@+id/btnSaveToBank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="save to bank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBackWallet" />

    <TextView
        android:id="@+id/instruction2_wallet"
...
